# nano-qwen3tts-vllm

./: README.md  pyproject.toml
examples/: batch_async_example.py  client.py  client_clone.py  client_custom.py  gradio_voice_clone.py  gradio_voice_design.py  quick_benchmark.py  server.py  server_clone.py  test_interface_zmq.py  voice_clone_example.py  voice_design_example.py
examples/assets/: fiftyshades_anna.txt
examples/voices/: Anna.pkl
nano-qwen3tts-vllm/: config.py  interface.py
nano-qwen3tts-vllm/engine/: scheduler.py
nano-qwen3tts-vllm/engine/llm_engine/: base.py  talker_llm_engine.py
nano-qwen3tts-vllm/engine/model_runner/: base.py  predictor_model_runner.py  talker_mode_runner.py
nano-qwen3tts-vllm/models/: qwen3_tts_predictor.py
nano-qwen3tts-vllm/utils/: audio.py  embedding_loader.py  generation.py  prompt.py  speech_tokenizer_cudagraph.py
nano-qwen3tts-vllm/workers/: __init__.py  client_bridge.py  predictor_worker.py  protocol.py  talker_worker.py
nano-qwen3tts-vllm/zmq/: __init__.py  engine_loop.py  engine_loop_mp.py  utils.py
nano_qwen3tts_vllm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
