[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-qwen3tts-vllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "qwen-tts>=0.0.5",
    "soundfile>=0.12.0",
    "torch>=2.10.0",
    "transformers>=4.57.3",
    "pyzmq>=27.1.0",
    "asyncio>=4.0.0",
    "xxhash>=3.6.0",
]

[tool.setuptools.package-dir]
"nano_qwen3tts_vllm" = "nano-qwen3tts-vllm"
